testdata/baselines/reference/submodule/compiler/argumentsReferenceInMethod5_Js.errors.txt
/a.js(7,13): error TS8010: Type annotations can only be used in TypeScript files.


==== /a.js (1 errors) ====
    const bar = {
    	arguments: {}
    }
    
    class A {
    	/**
    	 * @param {object} [foo={}]
    	           ~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    	 */
    	m(foo = {}) {
    		/**
    		 * @type object
    		 */
    		this.foo = foo;
    
    		/**
    		 * @type object
    		 */
    		this.bar = bar.arguments;
    	}
    }
    